ingress-lab/nginx-app1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
spec:
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1
spec:
  selector:
    app: nginx-app1
  ports:
  - port: 80
    targetPort: 80
