ingress-lab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app1
            port:
              number: 80
  - host: app2.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app2
            port:
              number: 80
  - host: minikube.local
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: nginx-app1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: nginx-app2
            port:
              number: 80
